@@ -40,4 +40,4 @@ Suggests:
     yuima,
     shinystan
 VignetteBuilder: knitr
-RoxygenNote: 5.0.1
+RoxygenNote: 5.0.1.9000
