@@ -1,8 +1,8 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/plot.ctStanFit.R
 \name{plot.ctStanFit}
-\alias{ctStanPlot}
 \alias{plot.ctStanFit}
+\alias{ctStanPlot}
 \title{plot.ctStanFit}
 \usage{
 \method{plot}{ctStanFit}(x, types = "all", wait = TRUE, ...)
